Subo para commit consumer del auto commit